--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             },
         };
     </script>
+    <script src="https://kit.fontawesome.com/e85274f24a.js" crossorigin="anonymous"></script>
+
 
 </head>
 
@@ -55,16 +57,47 @@
                     style="max-width: 200px; height: 80px;">
 
                 <ul class="header_list">
-                    <li class="header_nav">Pistols</li>
-                    <li class="header_nav" style="font-weight: 500; opacity: 1;">Rifles</li>
-                    <li class="header_nav">SMGs</li>
-                    <li class="header_nav">Heavy</li>
-                    <li class="header_nav">Knives</li>
-                    <li class="header_nav">Gloves</li>
-                    <li class="header_nav">Cases</li>
-                    <li class="header_nav">Collections</li>
-                    <li class="header_nav">Tournaments</li>
-                    <li class="header_nav">Other</li>
+                    <li class="header_nav">
+                        <p class="nav_title">Pistol</p>
+                        <div class="hover_list pistol"></div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">Rifles</p>
+                        <div class="hover_list rifles"></div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">SMGs</p>
+                        <div class="hover_list smgs"></div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">Heavy</p>
+                        <div class="hover_list heavy"></div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">Knives</p>
+                        <div class="hover_list knives" style="width: 190px; max-height: 400px; overflow-y: scroll;">
+                        </div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">Gloves</p>
+                        <div class="hover_list gloves"></div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">Cases</p>
+                        <div class="hover_list cases"></div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">Collections</p>
+                        <div class="hover_list collections"></div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">Tournaments</p>
+                        <div class="hover_list tournaments"></div>
+                    </li>
+                    <li class="header_nav">
+                        <p class="nav_title">Others</p>
+                        <div class="hover_list others"></div>
+                    </li>
                 </ul>
             </div>
 
@@ -201,8 +234,66 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="ft_container">
+            <div class="ft_left">
+                <div class="ft_logo">
+                    <img src="https://csgoskins.gg/media/images/logo/open-graph.png" style="width: 200px;" alt="">
+                </div>
+                <div class="ft_des">
+                    <p>Powered by Steam.<br>
+                        Not affiliated with Valve Corp.</p>
+                    <div class="ft_social">
+                        <i class="fa-brands fa-discord"></i>
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-steam"></i>
+                    </div>
+                    <p>2023 © CSGOSKINS.GG</p>
+                </div>
+            </div>
+
+            <ul class="ft_right">
+                <li class="ftr_list">
+                    <h5>Latest Updates</h5>
+                    <p>Paris 2023 Champion Stickers</p>
+                    <p>Paris 2023 Stickers</p>
+                    <p>Anubis Skins</p>
+                    <p>Revolution Case Skins</p>
+                    <p>Rio 2022 Champion Stickers</p>
+                    <p>Rio 2022 Stickers</p>
+                    <p>5 Years In China Music Kit</p>
+                </li>
+
+                <li class="ftr_list">
+                    <h5>Company</h5>
+                    <p>API</p>
+                    <p>Feedback</p>
+                    <p>Status</p>
+                    <p>Terms of Service</p>
+                    <p>Privacy Policy</p>
+                    <p>Cookie Policy</p>
+                    <p>Imprint</p>
+                </li>
+
+                <li class="ftr_list">
+                    <h5>Quick Links</h5>
+                    <p>All CS:GO Skins</p>
+                    <p>All CS:GO Stickers</p>
+                    <p>All CS:GO Cases</p>
+                    <p>All CS:GO Keys</p>
+                    <p>All CS:GO Agents</p>
+                    <p>All CS:GO Markets</p>
+                    <p>All CS:GO Updates</p>
+                </li>
+            </ul>
+        </div>
+    </footer>
     <!-- ---------SCRIPT----------- -->
     <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/tw-elements.umd.min.js"></script>
+    <script src="https://kit.fontawesome.com/e85274f24a.js" crossorigin="anonymous"></script>
     <script src="js.js"></script>
 
 </body>
